after i have connected to oracle

--- a/neptune/App.config
+++ b/neptune/App.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<!--
+	<configSections>
+		<section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.23.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+	</configSections>
+	-->
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="your_alias" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=your_host)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=your_service_name)))" />
+        <dataSource alias="OFFICE_DB" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.100.240)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=NEP01PDB)))" />
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
@@ -31,6 +36,12 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="OracleDbContext" connectionString="User Id=username;Password=password;Data Source=your_alias;" providerName="Oracle.ManagedDataAccess.Client" />
+    <add name="OracleDbContext" connectionString="User Id=fortunelive;Password=fortunelive;Data Source=OFFICE_DB;" providerName="Oracle.ManagedDataAccess.Client" />
   </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Oracle.ManagedDataAccess.Client" />
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.23.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
