--- a/neptune/packages.config
+++ b/neptune/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="Oracle.ManagedDataAccess" version="23.4.0" targetFramework="net472" />
   <package id="RestSharp" version="110.2.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="8.0.0" targetFramework="net472" />
